--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -45,7 +45,7 @@
             padding-right: 8px
         &_link
             font-size: 10px
-    .sub_header
+    .subheader
         &_logo
             img
                 width: 100%
@@ -141,7 +141,7 @@
         display: none
     .xs-visible
         display: block
-    .sub_header
+    .subheader
         &_logo
             margin-top: 27px
         &_offitial
