--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -28,7 +28,7 @@ header
         &:nth-child(6)
             border-right: none
 
-.sub_header
+.subheader
     position: absolute
     width: 100%
     height: 84px
@@ -95,7 +95,7 @@ header
         margin: 0
         text-align: center
 
-    &_sub_header
+    &_subheader
         color: #ffffff
         font-size: 36px
         font-weight: 700
